--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "roll": "^1.3.2",
+    "use-sound": "^5.0.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
